NUNIT 3.X Support - Projects to .NET 4.7

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ _ReSharper*/
 
 #NuGet
 packages/
+*.ide-wal
+/.vs/IntXLib/v15/Server/sqlite3/storage.ide-shm
+/.vs/IntXLib/v15/Server/sqlite3/storage.ide
+/.vs/IntXLib/v15/Server/sqlite3/db.lock
+/.vs/IntXLib/DesignTimeBuild/.dtbcache
